--- a/day13-automation-and-preprocessors/index.html
+++ b/day13-automation-and-preprocessors/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Day 5 excercises</title>
+    <title>Day 13 excercises</title>
 </head>
 <body>
-<h1>Day 5 excercises</h1>
+<h1>Day 13 excercises</h1>
 <ul>
-    <li><a href="01-no-server/">without server</a></li>
-    <li><a href="02-with-server/">with server</a></li>
+    <li><a href="example-01/">No other server and most basic example</a></li>
+    <li><a href="example-02/">More advanced example (SASS etc.)</a></li>
+    <li><a href="example-03/">Example with server</a></li>
 </ul>
 </body>
 </html>
