--- a/day13-automation-and-preprocessors/index.html
+++ b/day13-automation-and-preprocessors/index.html
@@ -6,10 +6,19 @@
 </head>
 <body>
 <h1>Day 13 excercises</h1>
-<ul>
-    <li><a href="example-01/">No other server and most basic example</a></li>
-    <li><a href="example-02/">More advanced example (SASS etc.)</a></li>
-    <li><a href="example-03/">Example with server</a></li>
-</ul>
+
+<h2>example-01</h2>
+<p>No other server and most basic example</p>
+
+<h2>example-02</h2>
+<p>More advanced example (SASS etc.)</p>
+
+
+<h2>example-03</h2>
+<p>Example with other server.</p>
+<p>This one is not standalone, you should copy only <code>package.json</code> and <code>gulpfile.js</code> to your PHP project and run <code>npm install</code>.</p>
+<p> You'll probably need to change several paths in <code>gulpfile.js</code> like where to store your css, where to find sass files, what is url of your local server etc.</p>
+<p>Also add <code>node_modules</code> to your <code>.gitignore</code> file to prevent accidental commiting of this huge and unnecessary folder.</p>
+
 </body>
 </html>
